# another_unplayplay

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  python-publish.yml
src/unplayplay/: __init__.py  consts.py  emu_session.py  exceptions.py  key_emu.py  trace_hook.py
src/unplayplay/emu/: addressing.py  heap_allocator.py  heap_chunk.py  runtime.py
src/unplayplay/emu/hooks/: hook_amd64.py  hook_malloc.py  hook_stubs.py  stub_patches.py
src/unplayplay/seh/: context.py  dispatcher.py  metadata.py  seh_hook.py  state.py  state_builder.py
tests/: test_keyemu.py
