[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unplayplay"
version = "0.0.7"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
description = "Playplay-based AES key generator for Spotify."

dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/cycyrild/another-unplayplay"
Repository = "https://github.com/cycyrild/another-unplayplay"
Issues = "https://github.com/cycyrild/another-unplayplay/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 120
target-version = "py310"

src = ["src"]
extend-exclude = [
    "src/unplayplay/generated"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
